Crash (dependent on scene complexity). #35102

Closed
opened 2013-04-27 00:26:31 +02:00 by Anna Celarek · 5 comments

%%%--- Operating System, Graphics card ---
Win 7 x64, Nvidia GTX 550 Ti
Win 7 x64 ATI Radeon HD 4800 (only 56305 build tested)

- Blender version with error, and version that worked ---

daily build 56305, 56100, 55211, official 2.66a
CPU render, experimental feature set.
(test file was created in 56305, and then opened and crashed in the older versions)

- Short description of error ---

I tried to track down what exactly causes the crash, but couldn't. It seems that it stops crashing when I decrease the complexity of the scene in any way. But the memory usage is not that high. In the test scene, it crashes at Mem = 327.06M, the highest Mem I noted during a crash of a similar scene was about 2000M.

The attached scene crashes always, on both systems I tested.
The crashes started around the time when I put hair onto one of the objects, but they continued after I switched the hair off.
When I switch Object Data > Displacement > Method > to Bump for the object "trees_front.001", it stops crashing.
When I leave Displacement Method = Both, and delete all objects except for lights, camera and "trees_front.001" (which is the most complex object in the scene), it stops crashing.
When I delete "trees_front.001" and leave all other objects in the scene, it stops crashing.
When I remove all textures from the materials (editing each material nodes tree), it stops crashing.
When I override all mateirals by a gray Diffuse BSDF (Render Layers > Material), it stops crashing.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

The file is here (I'm sorry for the size, but smaller versions don't crash):
http://www.ania.xibo.at/tmp/animation_e_crashtest_no-hyrax.blend
Open the file, press F12 -> crash
It crashes at some point of the render calculations, in this case before it starts doing buckets.
Other versions of the file sometimes crashed after rendering half of the buckets, or sometimes it rendered one animation frame and crashed at the second frame (which was the moment that a hyrax jumped into the scene, increasing the scene complexity by its hairy presence).

%%%

%%%--- Operating System, Graphics card --- Win 7 x64, Nvidia GTX 550 Ti Win 7 x64 ATI Radeon HD 4800 (only 56305 build tested) - Blender version with error, and version that worked --- daily build 56305, 56100, 55211, official 2.66a CPU render, experimental feature set. (test file was created in 56305, and then opened and crashed in the older versions) - Short description of error --- I tried to track down what exactly causes the crash, but couldn't. It seems that it stops crashing when I decrease the complexity of the scene in any way. But the memory usage is not that high. In the test scene, it crashes at Mem = 327.06M, the highest Mem I noted during a crash of a similar scene was about 2000M. The attached scene crashes always, on both systems I tested. The crashes started around the time when I put hair onto one of the objects, but they continued after I switched the hair off. When I switch Object Data > Displacement > Method > to Bump for the object "trees_front.001", it stops crashing. When I leave Displacement Method = Both, and delete all objects except for lights, camera and "trees_front.001" (which is the most complex object in the scene), it stops crashing. When I delete "trees_front.001" and leave all other objects in the scene, it stops crashing. When I remove all textures from the materials (editing each material nodes tree), it stops crashing. When I override all mateirals by a gray Diffuse BSDF (Render Layers > Material), it stops crashing. - Steps for others to reproduce the error (preferably based on attached .blend file) --- The file is here (I'm sorry for the size, but smaller versions don't crash): http://www.ania.xibo.at/tmp/animation_e_crashtest_no-hyrax.blend Open the file, press F12 -> crash It crashes at some point of the render calculations, in this case before it starts doing buckets. Other versions of the file sometimes crashed after rendering half of the buckets, or sometimes it rendered one animation frame and crashed at the second frame (which was the moment that a hyrax jumped into the scene, increasing the scene complexity by its hairy presence). %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%PS.
Strangely, no test scene crash with GPU render.
Which sadly won't solve my problem, because my GPU doesn't have enough memory for rendering my "real" scene. %%%

%%%PS. Strangely, no test scene crash with GPU render. Which sadly won't solve my problem, because my GPU doesn't have enough memory for rendering my "real" scene. %%%

%%%It's the displacement feature that crashed, somewhat random because it was accessing uninitialized memory. Fix in svn, thanks for the report.%%%

%%%It's the displacement feature that crashed, somewhat random because it was accessing uninitialized memory. Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks!
Now it's stable also in the bigger scene :) %%%

%%%Thanks! Now it's stable also in the bigger scene :) %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35102
No description provided.