Fix #35102: crash with experimental cycles displacement feature due to uninitialized memory usage.