intern/cycles/render/mesh.h
@@ -140,7 +140,7 @@ public:
 	MeshManager();
 	~MeshManager();
 
-	bool displace(Device *device, Scene *scene, Mesh *mesh, Progress& progress);
+	bool displace(Device *device, DeviceScene *dscene, Scene *scene, Mesh *mesh, Progress& progress);
 
 	/* attributes */
 	void update_osl_attributes(Device *device, Scene *scene, vector<AttributeRequestSet>& mesh_attributes);
